; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44300.c_check_smaep.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_44300.c_check_smaep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"/proc/cpuinfo\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"r\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"fopen\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"smap\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"smep\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @check_smaep() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca [512 x i8], align 16
  %4 = call i32* @fopen(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  store i32* %4, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = icmp ult i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 @perror(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  store i32 -1, i32* %1, align 4
  br label %37

9:                                                ; preds = %0
  %10 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %11 = call i32 @memset(i8* %10, i32 0, i32 512)
  br label %12

12:                                               ; preds = %33, %21, %9
  %13 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %14 = load i32*, i32** %2, align 8
  %15 = call i32* @fgets(i8* %13, i32 512, i32* %14)
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %34

17:                                               ; preds = %12
  %18 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %19 = call i64 @strlen(i8* %18)
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  br label %12

22:                                               ; preds = %17
  %23 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %24 = call i64 @strstr(i8* %23, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0))
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %30, label %26

26:                                               ; preds = %22
  %27 = getelementptr inbounds [512 x i8], [512 x i8]* %3, i64 0, i64 0
  %28 = call i64 @strstr(i8* %27, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0))
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %26, %22
  %31 = load i32*, i32** %2, align 8
  %32 = call i32 @fclose(i32* %31)
  store i32 -1, i32* %1, align 4
  br label %37

33:                                               ; preds = %26
  br label %12

34:                                               ; preds = %12
  %35 = load i32*, i32** %2, align 8
  %36 = call i32 @fclose(i32* %35)
  store i32 0, i32* %1, align 4
  br label %37

37:                                               ; preds = %34, %30, %7
  %38 = load i32, i32* %1, align 4
  ret i32 %38
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @memset(i8*, i32, i32) #1

declare dso_local i32* @fgets(i8*, i32, i32*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i64 @strstr(i8*, i8*) #1

declare dso_local i32 @fclose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
